# Optimizador_Transporte

./: README.md  app.py  clientes.xlsx  column_mapping.json  config.yaml  pyproject.toml  requirements.txt  ruta.xlsx  test_ors_key.py  ~$ruta.xlsx
cache/: matrices.json  matrix_64a21ab3d2bb22e8b5ac27ca797a1d9f.pkl
pages/: cost_optimizer.py  route_planner.py
plans/: 2025-05-21_plan_0020c3a2.json  2025-05-21_plan_02c63b9d.json  2025-05-21_plan_048bbde7.json  2025-05-21_plan_061982c1.json  2025-05-21_plan_0f131ab3.json  2025-05-21_plan_0fc58a0b.json  2025-05-21_plan_1f980ea0.json  2025-05-21_plan_4696833a.json  2025-05-21_plan_4ce07366.json  2025-05-21_plan_5b29845c.json  2025-05-21_plan_6cdacd08.json  2025-05-21_plan_6cdc09d2.json  2025-05-21_plan_709b185c.json  2025-05-21_plan_782c187b.json  2025-05-21_plan_94d7425b.json  2025-05-21_plan_9d32c140.json  2025-05-21_plan_9d47eff7.json  2025-05-21_plan_b132ca15.json  2025-05-21_plan_b51f036d.json  2025-05-21_plan_b765ef93.json  2025-05-21_plan_bf385707.json  2025-05-21_plan_f4fa8613.json  2025-05-22_plan_02558b67.json  2025-05-22_plan_26503f56.json  2025-05-22_plan_2704a518.json  2025-05-22_plan_2d2f0452.json  2025-05-22_plan_3080eff4.json  2025-05-22_plan_3a0d3eb1.json  2025-05-22_plan_3a4fc6ca.json  2025-05-22_plan_3d66cce6.json  2025-05-22_plan_504e2fa2.json  2025-05-22_plan_5d50c5cd.json  2025-05-22_plan_c73d55b5.json  2025-05-22_plan_d52154f2.json  2025-05-22_plan_f7879390.json  2025-05-22_plan_f97c2215.json  2025-05-22_plan_fae0942c.json  2025-05-26_plan_08f6f10a.json  2025-05-26_plan_0a443110.json  (+25 more)
ui/: driver.py  (+1 more)
(+8 files in other folders)
