[project]
name = "my-routes-app"
version = "0.1.0"
dependencies = [
    "streamlit>=1.24.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "folium>=0.14.0",
    "altair>=5.0.0",
    "ortools>=9.4",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "streamlit-folium>=0.11.0",
    "vl-convert-python>=1.0.0",  # Added
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["route_planner"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
python_files = "test_*.py"